language change added

--- a/indexeng.html
+++ b/indexeng.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,10 +26,11 @@
   </head>
 
   <body>
+    <!-- ! Header/Navbar/Language start -->
     <header>
       <div class="languages">
-        <a href="/Resume/indexeng.html"
-          ><img src="/Resume/assets/images/englishFlag.png" alt=""
+        <a href="/Resume/index.html"
+          ><img src="/Resume/assets/images/swedenflag.png" alt=""
         /></a>
       </div>
       <div class="row no-gutters">
@@ -38,7 +39,7 @@
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
               <h1 class="name">Henry A. Valle</h1>
-              <h2 class="title">Målare/Byggnadsarbetare</h2>
+              <h2 class="title">Painter/Construction worker</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -47,25 +48,25 @@
                 <li
                   class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem"
                 >
-                  <a href="index.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-home" aria-hidden="true"></i
-                    ><span>Hem</span></a
-                  >
+                  <a href="index.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <span>Home</span>
+                  </a>
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="resume.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-user-circle-o" aria-hidden="true"></i
-                    ><span>Återuppta</span></a
+                  <a href="resumeeng.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                    <span>Resume</span></a
                   >
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="gallery.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-comment" aria-hidden="true"></i
-                    ><span>Galleri</span></a
+                  <a href="galleryeng.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-comment" aria-hidden="true"></i>
+                    <span>Gallery</span></a
                   >
                 </li>
                 <li
@@ -75,9 +76,10 @@
                     href="assets/cv/CV_HenryValle.pdf"
                     target="_blank"
                     class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Ladda ner</span></a
                   >
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                    <span>Download</span>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -85,17 +87,20 @@
         </div>
       </div>
     </header>
+    <!-- ! Header/Navbar/language end-->
+
+    <!-- Personal Info section start-->
     <section class="container-fluid">
       <div class="row">
         <div class="col-md-4 bg-color-personal-info section-column">
           <div class="row">
             <div class="col-12">
-              <h3 class="section-heading uppercase">personlig information</h3>
+              <h3 class="section-heading uppercase">Personal information</h3>
             </div>
           </div>
           <div class="personal-info-item">
             <div class="key">
-              <p class="uppercase">Namn:</p>
+              <p class="uppercase">Name:</p>
             </div>
             <div class="value">
               <p>Henry A. Valle</p>
@@ -103,7 +108,7 @@
           </div>
           <div class="personal-info-item">
             <div class="key">
-              <p class="uppercase">födelsedatum:</p>
+              <p class="uppercase">Date of Birth:</p>
             </div>
             <div class="value">
               <p>6/1986</p>
@@ -111,7 +116,7 @@
           </div>
           <div class="personal-info-item">
             <div class="key">
-              <p class="uppercase">nationalitet:</p>
+              <p class="uppercase">Nationality:</p>
             </div>
             <div class="value">
               <p>Honduras</p>
@@ -119,7 +124,7 @@
           </div>
           <div class="personal-info-item">
             <div class="key">
-              <p class="uppercase">adress:</p>
+              <p class="uppercase">address:</p>
             </div>
             <div class="value">
               <p>Lingvägen 183 Farsta, Stockholm</p>
@@ -127,15 +132,15 @@
           </div>
           <div class="personal-info-item">
             <div class="key">
-              <p class="uppercase">telefon:</p>
+              <p class="uppercase">Phone Number:</p>
             </div>
             <div class="value">
-              <p>072 031 4301</p>
+              <p>+4672 031 4301</p>
             </div>
           </div>
           <div class="personal-info-item">
             <div class="key">
-              <p class="uppercase">e-post:</p>
+              <p class="uppercase">E-mail:</p>
             </div>
             <div class="value">
               <p>alexandervh1986@gmail.com</p>
@@ -154,9 +159,7 @@
                 >
                   <span class="sr-only">90% complete</span>
                 </div>
-                <span class="progress-type2"
-                  >Förmåga att organisera eget arbete</span
-                >
+                <span class="progress-type2">Ability to organize own work</span>
               </div>
               <div class="progress">
                 <div
@@ -165,13 +168,11 @@
                   aria-valuenow="80"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 100%"
+                  style="width: 80%"
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type2">
-                  Förmåga att arbeta i ett team</span
-                >
+                <span class="progress-type2"> Ability to work in a team</span>
               </div>
               <div class="progress">
                 <div
@@ -184,7 +185,7 @@
                 >
                   <span class="sr-only">60% complete</span>
                 </div>
-                <span class="progress-type2">Kommunikativ</span>
+                <span class="progress-type2">Communicative</span>
               </div>
               <div class="progress">
                 <div
@@ -197,7 +198,7 @@
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type2">Kooperativ</span>
+                <span class="progress-type2">Cooperative</span>
               </div>
               <div class="progress">
                 <div
@@ -210,7 +211,7 @@
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type2">Vänliga och hjälpsamma</span>
+                <span class="progress-type2">Friendly and helpful</span>
               </div>
               <div class="progress">
                 <div
@@ -223,9 +224,7 @@
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type2"
-                  >Hög uppmärksamhet på detaljer</span
-                >
+                <span class="progress-type2">High attention to detail</span>
               </div>
               <div class="progress">
                 <div
@@ -238,7 +237,46 @@
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type2">Öga för detaljer</span>
+                <span class="progress-type2">Eye for details</span>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 100%"
+                >
+                  <span class="sr-only">80% complete</span>
+                </div>
+                <span class="progress-type2">reliable</span>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 83%"
+                >
+                  <span class="sr-only">80% complete</span>
+                </div>
+                <span class="progress-type2">Focused </span>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 100%"
+                >
+                  <span class="sr-only">80% complete</span>
+                </div>
+                <span class="progress-type2">Goal setting</span>
               </div>
               <div class="progress">
                 <div
@@ -251,7 +289,7 @@
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type2">pålitlig</span>
+                <span class="progress-type2">Easy learner</span>
               </div>
               <div class="progress">
                 <div
@@ -260,11 +298,11 @@
                   aria-valuenow="80"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 90%"
+                  style="width: 80%"
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type2">Fokuserad </span>
+                <span class="progress-type2">English</span>
               </div>
               <div class="progress">
                 <div
@@ -273,50 +311,11 @@
                   aria-valuenow="80"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 85%"
-                >
-                  <span class="sr-only">80% complete</span>
-                </div>
-                <span class="progress-type2">Målsättning</span>
-              </div>
-              <div class="progress">
-                <div
-                  class="progress-bar"
-                  role="progressbar"
-                  aria-valuenow="80"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 90%"
-                >
-                  <span class="sr-only">80% complete</span>
-                </div>
-                <span class="progress-type2">Lättlärd</span>
-              </div>
-              <div class="progress">
-                <div
-                  class="progress-bar"
-                  role="progressbar"
-                  aria-valuenow="80"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 90%"
-                >
-                  <span class="sr-only">80% complete</span>
-                </div>
-                <span class="progress-type2">engelsk</span>
-              </div>
-              <div class="progress">
-                <div
-                  class="progress-bar"
-                  role="progressbar"
-                  aria-valuenow="80"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 40%"
+                  style="width: 30%"
                 >
                   <span class="sr-only">35% complete</span>
                 </div>
-                <span class="progress-type2">svenska</span>
+                <span class="progress-type2">Swedish</span>
               </div>
               <div class="progress">
                 <div
@@ -329,16 +328,18 @@
                 >
                   <span class="sr-only">30% complete</span>
                 </div>
-                <span class="progress-type2">spanska</span>
+                <span class="progress-type2">Spanish</span>
               </div>
             </div>
           </div>
         </div>
+        <!-- Personal Info section end -->
 
+        <!-- ! about section start -->
         <div class="col-md-8 bg-color-three-reasons section-column">
           <div class="row">
             <div class="col">
-              <h3 class="section-heading uppercase">Om mig</h3>
+              <h3 class="section-heading uppercase">About</h3>
             </div>
           </div>
           <div class="row">
@@ -351,32 +352,33 @@
                   ></i>
                 </div>
                 <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">Vad gör jag?</h4>
+                  <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                   <ul>
                     <li>
-                      Jag är en skicklig målare med mer än 10 års erfarenhet av
-                      målning och sprutning med olika typer av färger som
-                      oljebas, latex, träbetsar, barnish, Emalj,
-                      Korrosionsskyddande, Plastfärger som halv/högblank i
-                      projekt från nybyggnation och ommålning.
+                      I am a skilled painter with more than 10 years of
+                      experience painting and spraying with different types of
+                      paints such as oil base, latex, wood stains, varnish,
+                      Enamel, Corrosion protective, Plastic colors such as
+                      semi/high gloss i projects from new construction and
+                      repainting.
                     </li>
                     <br />
                     <li>
-                      Erfarenhet av att arbeta med gips (gips) från inramning,
-                      installation, tejp och gips interiör gipsskivor, knockdown
-                      textur, väggreparationer, mögelsanering och
-                      vattenskadesanering.
+                      Experience working with plaster (plaster) from framing,
+                      installation, tape and plaster interior plasterboard,
+                      knockdown texture, wall repairs, mold remediation and
+                      water damage cleanup.
                     </li>
                     <br />
                     <li>
-                      Grundläggande snickeri som installation av golvlister,
-                      installation av fönster/dörrlister, mindre strukturella
-                      reparationer och viss erfarenhet av laminat/trägolv
+                      Basic carpentry such as installing skirting boards,
+                      installation of window/door moldings, less structural
+                      repairs and some experience with laminate/wood floors
                     </li>
                     <br />
-                    <li>Erfarenhet av installation av golvplattor.</li>
+                    <li>Experience in installing floor tiles.</li>
                     <br />
-                    <li>Mindre VVS reparationer.</li>
+                    <li>Basic plumbing repairs.</li>
                   </ul>
                 </div>
               </div>
@@ -390,17 +392,15 @@
                   ></i>
                 </div>
                 <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">
-                    Varför anlita mig?
-                  </h4>
+                  <h4 class="three-reasons-heading uppercase">Why hire me??</h4>
                   <p>
-                    Jag arbetar effektivt med att få saker att bygga och göras
-                    på rätt sätt för att garantera förväntade resultat från
-                    arbetsgivaren/projektledaren för att möta kundernas
-                    efterfrågan. Jag är en utmärkt kommunikatör som prioriterar
-                    respekt, stöd och samarbete för mina lagkamrater. Jag gillar
-                    att följa arbetsomfattningen från teamledare och
-                    projektledare då de är huvudpersonen för att leda projekten.
+                    I work effectively in getting things built and done properly
+                    to guarantee expected results from the employer/project
+                    manager to meet the customers' demand. I am an excellent
+                    communicator who prioritises respect, support and
+                    cooperation for my teammates. I like to follow the scope of
+                    work from team leaders and project manager as they are the
+                    main person to lead the projects.
                   </p>
                 </div>
               </div>
@@ -409,32 +409,35 @@
         </div>
       </div>
     </section>
+    <!-- ! about section end -->
 
+    <!-- Footer start -->
     <footer class="container-fluid">
       <div id="footer-details" class="row">
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Om mig</h5>
           <p class="inline-block">
-            Målare/Byggnadsarbetare med kompetens och erfarenhet av inredning av
-            hem.
+            Painter/Construction worker with skills and experience in interior
+            design Home.
           </p>
         </div>
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
-            Behöver du en utskrivbar version av mitt CV? Ladda ner den här.
+            Need a printable version of my resume? Download it here.
             <a
               href="assets/cv/CV_HenryValle.pdf"
               target="_blank"
               class="cv-pdf"
             >
               <i class="fa fa-download" aria-hidden="true"></i>
-              <span class="sr-only">ladda ner.</span>
+              <span class="sr-only">Download.</span>
             </a>
           </p>
         </div>
       </div>
     </footer>
+    <!-- Footer end-->
   </body>
   <script src="index.js"></script>
 </html>
