--- a/resumeeng.html
+++ b/resumeeng.html
@@ -32,14 +32,15 @@
     <title>Resume</title>
   </head>
   <body>
+    <!-- ! Header/Navbar/Language start -->
     <header>
       <div class="row no-gutters">
-        <a href="index.html" class="col-md-4 logo"> </a>
+        <a href="index.html" class="col-md-4 logo"></a>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
               <h1 class="name">Henry A. Valle</h1>
-              <h2 class="title">Målare/Byggnadsarbetare</h2>
+              <h2 class="title">Painter/Construction worker</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -48,25 +49,25 @@
                 <li
                   class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem"
                 >
-                  <a href="index.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-home" aria-hidden="true"></i
-                    ><span>Hem</span></a
-                  >
+                  <a href="index.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <span>Home</span>
+                  </a>
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="resume.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-user-circle-o" aria-hidden="true"></i
-                    ><span>återuppta</span></a
+                  <a href="resume.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                    <span>Resume</span></a
                   >
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="gallery.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-comment" aria-hidden="true"></i
-                    ><span>Galleri</span></a
+                  <a href="galleryeng.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-comment" aria-hidden="true"></i>
+                    <span>Gallery</span></a
                   >
                 </li>
                 <li
@@ -74,10 +75,12 @@
                 >
                   <a
                     href="assets/cv/CV_HenryValle.pdf"
+                    target="_blank"
                     class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Ladda Ner</span></a
                   >
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                    <span>Download</span>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -85,12 +88,14 @@
         </div>
       </div>
     </header>
+    <!-- ! Header/Navbar/language end-->
+
     <section class="container-fluid">
       <div class="row">
         <div class="col-md-4 bg-color-work-history section-column">
           <div class="row">
             <div class="col-12">
-              <h3 class="history-heading uppercase">Jobbhistorik</h3>
+              <h3 class="history-heading uppercase">Job history</h3>
             </div>
           </div>
           <div class="history-items">
@@ -99,41 +104,41 @@
                 Cordova condominiums & FIU university for N&B painting Corp,
                 Miami Florida USA
               </h4>
-              <p>Målare</p>
+              <p>Painter</p>
             </div>
             <div class="timeline-item" data-dates="11/2014 - 10/2015">
               <h4>Restoration USA, Pompano Beach, Florida USA</h4>
               <p>
-                Mögelsanering och vattenskadesanering, gipsskivor, VVS och
-                målning
+                Mold remediation and water damage remediation, plasterboard,
+                plumbing and painting
               </p>
             </div>
             <div class="timeline-item" data-dates="03/2016 - 11/2016">
               <h4>Home remodeling for Oasis LLC, Deerfield beach FL USA</h4>
-              <p>Målning, Gips & snickeri</p>
+              <p>Painting, Plaster & carpentry</p>
             </div>
             <div class="timeline-item" data-dates="11/2016 - 03/2017">
               <h4>
                 Aqualina spa & resort for JS carpentry, Sunny Isles beach, FL
                 USA
               </h4>
-              <p>Gipsmålning, brandvägg & gasledningsinspektion.</p>
+              <p>Plaster painting, firewall & gas line inspection.</p>
             </div>
             <div class="timeline-item" data-dates="03/2017 - 09/2017">
               <h4>
                 The Villages for JJ&V painting corp, West Palm Beach FL USA
               </h4>
-              <p>Målare</p>
+              <p>Painter</p>
             </div>
             <div class="timeline-item" data-dates="09/2017 - 06/2018">
               <h4>Doherty construction group llc, West palm beach FL USA</h4>
               <p>
-                Hemrenovering, kakelläggning, gipsskivor, målning och snickeri
+                Home renovation, tiling, plasterboard, painting and carpentry
               </p>
             </div>
             <div class="timeline-item" data-dates="02/2019 - 04/2019">
               <h4>The Marella Explorer 2 cruise Ship, Cadiz, Spain</h4>
-              <p>rivning/byggnation.</p>
+              <p>demolition/construction.</p>
             </div>
             <div class="timeline-item" data-dates="04/2019 - 12/2021">
               <h4>Part AB Kalix Norbotten Lan.</h4>
@@ -149,7 +154,7 @@
         <div class="col-md-8 bg-color-three-reasons section-column">
           <div class="row">
             <div class="col">
-              <h3 class="section-heading uppercase">Mina färdigheter</h3>
+              <h3 class="section-heading uppercase">My skills</h3>
             </div>
           </div>
           <div class="row">
@@ -162,7 +167,7 @@
                   ></i>
                 </div>
                 <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">Målare</h4>
+                  <h4 class="three-reasons-heading uppercase">Painter</h4>
                 </div>
               </div>
             </div>
@@ -176,7 +181,7 @@
                 </div>
 
                 <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">Konstruktion</h4>
+                  <h4 class="three-reasons-heading uppercase">Construction</h4>
                 </div>
               </div>
             </div>
@@ -194,7 +199,7 @@
                 >
                   <span class="sr-only">90% complete</span>
                 </div>
-                <span class="progress-type">Målare</span>
+                <span class="progress-type">Painter</span>
               </div>
               <div class="progress">
                 <div
@@ -207,7 +212,7 @@
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type">Gipsvägg</span>
+                <span class="progress-type">DryWall</span>
               </div>
               <div class="progress">
                 <div
@@ -220,7 +225,7 @@
                 >
                   <span class="sr-only">60% complete</span>
                 </div>
-                <span class="progress-type">Snickeri</span>
+                <span class="progress-type">Carpenty</span>
               </div>
               <div class="progress">
                 <div
@@ -233,7 +238,7 @@
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type">Kakelsättare</span>
+                <span class="progress-type">Tiler</span>
               </div>
               <div class="progress">
                 <div
@@ -246,37 +251,40 @@
                 >
                   <span class="sr-only">80% complete</span>
                 </div>
-                <span class="progress-type">VVS</span>
+                <span class="progress-type">Plumbing</span>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- Footer start -->
     <footer class="container-fluid">
       <div id="footer-details" class="row">
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Om mig</h5>
           <p class="inline-block">
-            Målare/Byggnadsarbetare med kompetens och erfarenhet av inredning av
-            hem.
+            Painter/Construction worker with skills and experience in interior
+            design Home.
           </p>
         </div>
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
-            Behöver du en utskrivbar version av mitt CV? Ladda ner den här.
+            Need a printable version of my resume? Download it here.
             <a
               href="assets/cv/CV_HenryValle.pdf"
               target="_blank"
               class="cv-pdf"
             >
               <i class="fa fa-download" aria-hidden="true"></i>
-              <span class="sr-only">Ladda ner.</span>
+              <span class="sr-only">Download.</span>
             </a>
           </p>
         </div>
       </div>
     </footer>
+    <!-- Footer end-->
   </body>
 </html>
