--- a/galleryeng.html
+++ b/galleryeng.html
@@ -22,17 +22,17 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/lightbox.min.css" />
     <script src="assets/js/lightbox-plus-jquery.min.js"></script>
-    <title>Galleri</title>
+    <title>Gallery</title>
   </head>
   <body>
     <header>
       <div class="row no-gutters">
-        <a href="index.html" class="col-md-4 logo"> </a>
+        <a href="index.html" class="col-md-4 logo"></a>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
-              <h1 class="name">Henry Valle</h1>
-              <h2 class="title">Målare/Byggnadsarbetare</h2>
+              <h1 class="name">Henry A. Valle</h1>
+              <h2 class="title">Painter/Construction worker</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -41,25 +41,25 @@
                 <li
                   class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem"
                 >
-                  <a href="index.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-home" aria-hidden="true"></i
-                    ><span>Hem</span></a
-                  >
+                  <a href="index.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <span>Home</span>
+                  </a>
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="resume.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-user-circle-o" aria-hidden="true"></i
-                    ><span>återuppta</span></a
+                  <a href="resume.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                    <span>Resume</span></a
                   >
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="gallery.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-comment" aria-hidden="true"></i
-                    ><span>Galleri</span></a
+                  <a href="gallery.html" class="hvr-sweep-to-bottom">
+                    <i class="fa fa-comment" aria-hidden="true"></i>
+                    <span>Gallery</span></a
                   >
                 </li>
                 <li
@@ -67,9 +67,11 @@
                 >
                   <a
                     href="assets/cv/CV_HenryValle.pdf"
+                    target="_blank"
                     class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Ladda Ner</span></a
+                  >
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                    <span>Download</span></a
                   >
                 </li>
               </ul>
