--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <p class="uppercase">adress:</p>
             </div>
             <div class="value">
-              <p>Lingvägen 183 Farsta, Stockholm</p>
+              <p>Sunneplan 15, Stockholm</p>
             </div>
           </div>
           <div class="personal-info-item">
