--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <p class="uppercase">adress:</p>
             </div>
             <div class="value">
-              <p>Sunneplan 15, Stockholm</p>
+              <p>Jämtlandsgatan 90 Stockholm</p>
             </div>
           </div>
           <div class="personal-info-item">
@@ -130,7 +130,7 @@
               <p class="uppercase">telefon:</p>
             </div>
             <div class="value">
-              <p>072 031 4301</p>
+              <p>072 901 8793</p>
             </div>
           </div>
           <div class="personal-info-item">
@@ -354,11 +354,10 @@
                   <h4 class="three-reasons-heading uppercase">Vad gör jag?</h4>
                   <ul>
                     <li>
-                      Jag är en skicklig målare med mer än 10 års erfarenhet av
-                      målning och sprutning med olika typer av färger som
-                      oljebas, latex, träbetsar, barnish, Emalj,
-                      Korrosionsskyddande, Plastfärger som halv/högblank i
-                      projekt från nybyggnation och ommålning.
+                      Jag är en kvalificerad målare med över 10 års erfarenhet
+                      av att arbeta med olika typer av färger såsom oljebaserade, 
+                      latex, träbetsar, fernissor,
+                      emaljer, korrosionsskydd på projekt från nybyggnation eller bostäder
                     </li>
                     <br />
                     <li>
@@ -369,14 +368,13 @@
                     </li>
                     <br />
                     <li>
-                      Grundläggande snickeri som installation av golvlister,
-                      installation av fönster/dörrlister, mindre strukturella
-                      reparationer och viss erfarenhet av laminat/trägolv
+                      Grundläggande snickeri, som att installera socklar, 
+                      mindre strukturella reparationer och viss erfarenhet 
+                      av laminat- eller trägolv.
                     </li>
                     <br />
                     <li>Erfarenhet av installation av golvplattor.</li>
                     <br />
-                    <li>Mindre VVS reparationer.</li>
                   </ul>
                 </div>
               </div>
@@ -415,8 +413,7 @@
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Om mig</h5>
           <p class="inline-block">
-            Målare/Byggnadsarbetare med kompetens och erfarenhet av inredning av
-            hem.
+            Målare/Byggnadsarbetare med erfarenhet
           </p>
         </div>
         <div class="col-sm-4">
@@ -424,7 +421,7 @@
           <p class="inline-block">
             Behöver du en utskrivbar version av mitt CV? Ladda ner den här.
             <a
-              href="assets/cv/CV_HenryValle.pdf"
+              href="assets/cv/CV_HenryValleSV.pdf"
               target="_blank"
               class="cv-pdf"
             >
