--- a/resume.html
+++ b/resume.html
@@ -137,12 +137,27 @@
             </div>
             <div class="timeline-item" data-dates="04/2019 - 12/2021">
               <h4>Part AB Kalix Norbotten Lan.</h4>
+              <p>kakelsättare på prefabricerade badrum</p>
             </div>
             <div class="timeline-item" data-dates="05/2022 - 8/2022">
               <h4>Andreu Bygg AB Stockholm.</h4>
+              <p> gips, målning och snickeri</p>
             </div>
-            <div class="timeline-item" data-dates="08/2022 - Present">
+            <div class="timeline-item" data-dates="08/2022 - 1/2023">
               <h4>Submit AB Stockholm.</h4>
+              <p>målning</p>
+            </div>
+            <div class="timeline-item" data-dates="01/2023 - 6/2023">
+              <h4>B4D Gruppen AB.</h4>
+              <p>målning</p>
+            </div>
+            <div class="timeline-item" data-dates="12/2023 - 2/2024">
+              <h4>Bromma Måleri.</h4>
+              <p>målning</p>
+            </div>
+            <div class="timeline-item" data-dates="2/2023 - 7/2023">
+              <h4>LIGAB Bygg och entrepenad.</h4>
+              <p>projektledare</p>
             </div>
           </div>
         </div>
