--- a/resumeeng.html
+++ b/resumeeng.html
@@ -145,9 +145,23 @@
             </div>
             <div class="timeline-item" data-dates="05/2022 - 8/2022">
               <h4>Andreu Bygg AB Stockholm.</h4>
+              <p>Painter, wallpaper and DryWall(gyps)</p>
             </div>
-            <div class="timeline-item" data-dates="08/2022 - Present">
+            <div class="timeline-item" data-dates="08/2022 - 1/2023">
               <h4>Submit AB Stockholm.</h4>
+              <p>Painter</p>
+            </div>
+            <div class="timeline-item" data-dates="01/2023 - 6/2023">
+              <h4>B4D Gruppen AB.</h4>
+              <p>Painter</p>
+            </div>
+            <div class="timeline-item" data-dates="12/2023 - 2/2024">
+              <h4>Bromma Måleri.</h4>
+              <p>Painter</p>
+            </div>
+            <div class="timeline-item" data-dates="2/2024 - 7/2024">
+              <h4>LIGAB Bygg och entrepenad.</h4>
+              <p>Project Manager</p>
             </div>
           </div>
         </div>
